<resources>
    <string name="app_name">Business</string>
    <string name="guest">Гість</string>
    <string name="entrepreneur">Підприємець</string>
    <string name="manager">Менеджер</string>
    <string name="enter_phone">Введіть номер</string>
    <string name="sign_up">Зареєструватись</string>
    <string name="sign_in_google">Вхід через Google</string>
    <string name="sign_in_manager">Увійти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="business">Назва підприємтва</string>
    <string name="surname">Ваше прізвище</string>
    <string name="name">Ваше ім\'я</string>
    <string name="surname_and_name">Прізвище та ім\'я</string>
    <string name="error_phone">Ви неправильно ввели номер</string>
    <string name="fire_db_client">Clients</string>
    <string name="error_manager">Це не робочий акаунт</string>
    <string name="error_client">Ви не клієнт</string>
    <string name="error_entrepreneur">Ви не підприємець</string>
    <string name="create_design">Створіть дизайн</string>
    <string name="item_objects">Об\'єкти</string>
    <string name="item_help">Допомога</string>
    <string name="item_add_manager">Додати менеджерів</string>
    <string name="choose_color">Виберіть колір</string>
    <string name="background">Фон</string>
    <string name="text">Текст</string>
    <string name="banner_overlay">накладка на банер</string>
    <string name="border_logotype">Рамка для логотипа</string>
    <string name="new_name">Нова назва</string>
    <string name="save">Зберегти</string>
    <string name="cancel">Відмінити</string>
    <string name="image_and_text">Картинка і текст</string>
    <string name="gallery">Галерея</string>
    <string name="less_than_five">Не можна створювати більше 5</string>
    <string name="delete">Видатили</string>
    <string name="you_have_gallery">Ви вже створили галерею</string>
    <string name="apply">Застосувати</string>
    <string name="createBodyDesign">Дизайн тіла створений</string>
    <string name="max_five">Максимум 5 елементів</string>
    <string name="you_do_not_add_logotype">Ви не додали логотип</string>
    <string name="you_do_not_add_banner">Ви не додали баннер</string>
    <string name="you_do_not_add_design">Ви не додали дизайн тіла</string>
    <string name="you_must_create_body_design">Не забудьте додати дизайн тіла</string>
</resources>
